--- a/res/layout/pending_invoices_page.xml
+++ b/res/layout/pending_invoices_page.xml
@@ -39,5 +39,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Ok"
-            android:id="@+id/button"/>
+            android:id="@+id/btnOk"/>
+    <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Cancel"
+            android:id="@+id/btnCancel"/>
 </LinearLayout>
