--- a/res/layout/invoice_payment_details_page.xml
+++ b/res/layout/invoice_payment_details_page.xml
@@ -31,7 +31,7 @@
     <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" android:weightSum="100" android:background="#ff4f82b4" android:padding="1dp">
+            android:layout_height="wrap_content" android:weightSum="100" android:padding="1dp">
     <TextView
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
