--- a/res/layout/make_consignment_order_page.xml
+++ b/res/layout/make_consignment_order_page.xml
@@ -70,7 +70,8 @@
             <DatePicker
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:id="@+id/makeConsignmentOrderDeliveryDate" android:layout_margin="5dp"/>
+                    android:id="@+id/makeConsignmentOrderDeliveryDate"
+                    android:layout_margin="5dp"/>
             <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
